# 16-second

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json
.github/workflows/: ci.yml  release.yml
Source/: BackgroundWavesComponent.cpp  BackgroundWavesComponent.h  HouseLookAndFeel.cpp  HouseLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: FeedbackModel.cpp  FeedbackModel.h  LFO.cpp  LFO.h  Limiter.cpp  Limiter.h  MemoryBuffer.cpp  MemoryBuffer.h  Overdub.cpp  Overdub.h  RateStepper.cpp  RateStepper.h  Smoother.cpp  Smoother.h  StateMachine.cpp  StateMachine.h
docs/: CHANGELOG.md  SPEC.md  USAGE.md
scripts/: build_and_copy_windows.bat  build_and_copy_windows_2019.bat  build_and_copy_windows_2026.bat  copy_vst3_windows.ps1
tests/: CMakeLists.txt  test_feedback_model.cpp  test_lfo.cpp  test_limiter.cpp  test_memory_buffer.cpp  test_overdub.cpp  test_rate_stepper.cpp  test_sanity.cpp  test_smoother.cpp  test_state_machine.cpp
